# Wordbooster

./: CMakeLists.txt  LICENSE  README.md  flake.nix
src/: CMakeLists.txt  auto_cap.cpp  auto_cap.h  dictionary.cpp  dictionary.h  engine.cpp  engine.h  history_store.cpp  history_store.h  suggester.cpp  suggester.h  text_utils.cpp  text_utils.h  typing_session.cpp  typing_session.h  wordbooster-addon.conf.in  wordbooster.conf
tests/: CMakeLists.txt  auto_cap_test.cpp  dictionary_test.cpp  history_store_test.cpp  suggester_test.cpp  text_utils_test.cpp  typing_session_test.cpp
